# comfyui_segment_anything

./: .gitignore  .gitmodules  README.md  __init__.py  install.py  node.py  node_functions.py  pyproject.toml  requirements.txt
bck/: node.py  node_functions.py
libs/: __init__.py
libs/sam_hq/: automatic.py  predictorHQ.py
local_groundingdino/datasets/: transforms.py
local_groundingdino/models/GroundingDINO/: bertwarper.py  fuse_modules.py  groundingdino.py  ms_deform_attn.py  transformer.py  transformer_vanilla.py  utils.py
local_groundingdino/models/GroundingDINO/backbone/: backbone.py  position_encoding.py  swin_transformer.py
local_groundingdino/util/: box_ops.py  get_tokenlizer.py  inference.py  misc.py  slconfig.py  slio.py  utils.py
nodes/: node_batch_selector.py  node_dinosam_prompt.py  node_modelloader_dino.py  node_modelloader_sam.py  node_sam_autoseg.py
nodes_fnc/: node_dinosam_prompt.py  node_modelloader_dino.py  node_modelloader_sam.py  node_sam_autoseg.py
sam_hq/: build_sam_hq.py  predictor.py
sam_hq/modeling/: mask_decoder_hq.py  tiny_vit.py
utils/: collection.py
