[project]
name = "comfyui_segment_anything"
description = "Based on GroundingDino and SAM, use semantic strings to segment any element in an image. The comfyui version of sd-webui-segment-anything."
version = "1.0.0"
license = "LICENSE"
dependencies = ["segment_anything", "timm", "addict", "yapf"]

[project.urls]
Repository = "https://github.com/storyicon/comfyui_segment_anything"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_segment_anything"
Icon = ""
